Transit to ES5.1

--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Chaplin Test Runner</title>
     <link rel="stylesheet" href="bower_components/mocha/mocha.css">
+    <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/mocha/mocha.js"></script>
     <script src="bower_components/expect/expect.js"></script>
     <script src="bower_components/sinon/index.js"></script>
